--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <div id="start-page">
     <main>
-      <h1>Title of the game</h1>
-      <p>Instructions / Description</p>
+      <h1>IRON SUPERMARIO HACKER BROSS</h1>
+      <p>Mario wants to be a great developter, for that reason needs to learn more knowledge. He needs YOU, HELP HIM</p>
       <button id="start">START</button>
     </main>
   </div>
@@ -24,7 +24,7 @@
   </div>
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
-
+  <script src="js/mario.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
