--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </div>
 
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
+  
   <script src="js/seta.js"></script>
+  <script src="js/enemyes.js"></script>
   <script src="js/mario.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
