--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
     </main>
   </div>
 
-    <div id="lose-page">
+  <div id="lose-page">
     <main>
       <h1>YOU LOSE SUCKER</h1>
+    </main>
+  </div>
+
+  <div id="win-page">
+    <main>
+      <h1>YOU WIN 🎉</h1>
     </main>
   </div>
 
