--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
   <div id="start-page">
     <main>
-      <h1>IRON SUPERMARIO HACKER BROSS</h1>
-      <p>Mario wants to be a great developter, for that reason needs to learn more knowledge. He needs YOU, HELP HIM</p>
+      <h1 class="title1">IRONMARIOHACK</h1>
+      <p class = 'description'>Mario wants to be a great developer, for that reason needs to learn more knowledge. He needs YOU, HELP HIM</p>
       <button id="start">START</button>
+    </main>
+  </div>
+
+  <div id="win-page">
+    <main>
+      <h1>YOU WIN, YOU ARE READY FOR EAT JAVASCRIPT</h1>
     </main>
   </div>
 
@@ -23,17 +29,13 @@
     </main>
   </div>
 
-  <div id="win-page">
-    <main>
-      <h1>YOU WIN 🎉</h1>
-    </main>
-  </div>
-
   <canvas id="canvas" width="1000" height="600" class="hidden"></canvas>
   
-  <script src="js/seta.js"></script>
+  <script src="js/assets.js"></script>
   <script src="js/enemyes.js"></script>
   <script src="js/mario.js"></script>
+  <script src="js/seta.js"></script>
+  <script src="js/enemyes.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
