--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script src="js/mario.js"></script>
   <script src="js/seta.js"></script>
   <script src="js/enemyes.js"></script>
+  <script src="js/javascript.js"></script>
   <script src="js/game.js"></script>
   <script src="js/scripts.js"></script>
 </body>
