--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
   <div id="start-page">
-    <main>
+    <main id="main-page">
       <h1 class="title1">IRONMARIOHACK</h1>
-      <p class = 'description'>Mario wants to be a great developer, for that reason needs to learn more knowledge. He needs YOU, HELP HIM</p>
+      <p class = 'description'>Mario wants to be a great developer, for that reason needs to learn more knowledge. IN ORDER YOU HAVE TO HELP HIM TO GET THE JS KNOWLEDGE</p>
       <button id="start">START</button>
     </main>
   </div>
