--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="start-page">
     <main id="main-page">
       <h1 class="title1">IRONMARIOHACK</h1>
-      <p class = 'description'>Mario wants to be a great developer, for that reason needs to learn more knowledge. IN ORDER YOU HAVE TO HELP HIM TO GET THE JS KNOWLEDGE</p>
+      <p class = 'description'>MARIO WANTS TO BE A GREAT DEVELOPER. IN ORDER TO BE THE BEST IRONHACKER YOU HAVE TO HELP HIM TO GET THE JS KNOWLEDGE</p>
       <button id="start">START</button>
     </main>
   </div>
